--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">仿知乎</string>
+    <string name="app_name">Run For You </string>
     <string name="drawer_open">Menu opened</string>
     <string name="drawer_close">Menu closed</string>
 
